--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active ">
-            <img src="img/home-1.jpg" class="d-block w-100" alt="...">
+            <img class="img-fluid" src="img/home-1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Cardiovascular Excellence</h5>
                               <p>Unleash your potential, break a sweat, and achieve your fitness goals with Cardio Bliss!</p>
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="carousel-item ">
-            <img src="img/home-2.jpg" class="d-block w-100" alt="...">
+            <img class="img-fluid" src="img/home-2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Strength and Conditioning</h5>
                               <p> Join our strength community, push your limits, and witness the transformation as you build a stronger, healthier you.</p>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="carousel-item ">
-            <img src="img/home-3.jpg" class="d-block w-100" alt="...">
+            <img class="img-fluid" src="img/home-3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Group Fitness Fun</h5>
                               <p> Join the fitness party, make friends, and achieve your goals together in a fun and supportive community.</p>
