--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner img-fluid">
           <div class="carousel-item active ">
-            <img class="img-fluid" src="img/home-1.jpg" class="d-block w-100" alt="...">
+            <img  src="img/home-1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Cardiovascular Excellence</h5>
                               <p>Unleash your potential, break a sweat, and achieve your fitness goals with Cardio Bliss!</p>
                               <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
             </div>
           </div>
-          <div class="carousel-item ">
-            <img class="img-fluid" src="img/home-2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item img-fluid">
+            <img  src="img/home-2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Strength and Conditioning</h5>
                               <p> Join our strength community, push your limits, and witness the transformation as you build a stronger, healthier you.</p>
                               <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
             </div>
           </div>
-          <div class="carousel-item ">
-            <img class="img-fluid" src="img/home-3.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item img-fluid ">
+            <img src="img/home-3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Group Fitness Fun</h5>
                               <p> Join the fitness party, make friends, and achieve your goals together in a fun and supportive community.</p>
