--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner img-fluid">
+        <div class="carousel-inner">
           <div class="carousel-item active ">
             <img  src="img/home-1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
@@ -64,7 +64,7 @@
                               <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
             </div>
           </div>
-          <div class="carousel-item img-fluid">
+          <div class="carousel-item">
             <img  src="img/home-2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Strength and Conditioning</h5>
@@ -72,7 +72,7 @@
                               <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
             </div>
           </div>
-          <div class="carousel-item img-fluid ">
+          <div class="carousel-item">
             <img src="img/home-3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Group Fitness Fun</h5>
